# TFG_Frameworks_Agenticos

./: .env.example  .gitignore  README.md  pyproject.toml
benchmark_core/: __init__.py  checkpoint_memory_recovery.py  debate_judge.py  environment.py  experiment_runner.py  handoff_swarm.py  llm_wrapper.py  map_reduce_agentic.py  metrics.py  openai_usage.py  parallel_fanout_fanin.py  reflection_critic_loop.py  resource_monitor.py  result_builders.py  result_writer.py  schemas.py  tracing.py
configs/: datasets.yaml  experiments.yaml  models.yaml
docs/: decisions.md  methodology.md
docs/architecture_specs/: ARCH_01_SINGLE_REACT.md  ARCH_02_SEQUENTIAL_PIPELINE.md  ARCH_03_ROUTER_SPECIALISTS.md  ARCH_03_SUPERVISOR_WORKERS.md  ARCH_04_SUPERVISOR_WORKERS.md  ARCH_05_HANDOFF_SWARM.md  ARCH_06_PARALLEL_FANOUT_FANIN.md  ARCH_07_MAP_REDUCE_AGENTIC.md  ARCH_08_DEBATE_JUDGE.md  ARCH_09_REFLECTION_CRITIC_LOOP.md  ARCH_10_CHECKPOINT_MEMORY_RECOVERY.md
implementations/: __init__.py  supervisor_workers_common.py
implementations/crewai/: INSTALLATION_NOTES.md  README.md  __init__.py  requirements.txt  utils_crewai.py
scripts/: run_arch01_openai_smoke.py  run_arch01_smoke.py  run_arch02_smoke.py  run_arch03_smoke.py  run_arch06_openai_smoke.py  run_arch07_openai_smoke.py  run_arch08_openai_smoke.py  run_arch09_openai_smoke.py  run_arch10_openai_smoke.py
tests/: test_architecture_contracts.py  test_checkpoint_memory_recovery.py  test_debate_judge.py  test_llm_wrapper.py  test_openai_usage.py  test_reflection_critic_loop.py  test_result_writer.py  test_schemas.py
(+128 files in other folders)
