[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tfg-agent-frameworks"
version = "0.1.0"
description = "Benchmark tecnico de frameworks agenticos modernos para TFG."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

langgraph = [
    "langgraph==1.2.4",
    "langgraph-checkpoint-sqlite==3.1.0",
]

crewai = [
    "crewai==1.14.6",
]

microsoft_agent_framework = [
    "agent-framework-openai",
    "agent-framework-orchestrations",
]

llamaindex = [
    "llama-index",
    "llama-index-llms-openai",
]

pydantic_ai = [
    "pydantic-ai",
    "pydantic-graph",
]

all-frameworks = [
    "langgraph==1.2.4",
    "langgraph-checkpoint-sqlite==3.1.0",
    "crewai==1.14.6",
    "agent-framework-openai",
    "agent-framework-orchestrations",
    "llama-index",
    "llama-index-llms-openai",
    "pydantic-ai",
    "pydantic-graph",
]

[tool.setuptools]
packages = [
    "benchmark_core",
    "implementations",
    "implementations.crewai",
    "implementations.langgraph",
    "implementations.llamaindex",
    "implementations.microsoft_agent_framework",
    "implementations.pydantic_ai",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
